# USB_Switcher

./: .gitignore  CMakeLists.txt  README.md
PCBA/: USB_HID_Switcher.kicad_pcb  USB_HID_Switcher.kicad_prl  USB_HID_Switcher.kicad_pro  USB_HID_Switcher.kicad_sch
SampleFiles/: Meta-A  config
freertos/: CMakeLists.txt  FreeRTOSConfig.h
littlefs/: CMakeLists.txt
lua/: CMakeLists.txt
pico_pio_usb/: LICENSE  README.md
pico_pio_usb/src/: pio_usb_configuration.h
tinyusb/src/class/hid/: hid_host.c
usb_hid_switcher/: CDCCmd.c  CDCCmd.h  CMakeLists.txt  FreeRTOSConfig.h  GamepadReportParser.h  LuaTask.c  LuaTask.h  MouseReportParser.c  MouseReportParser.h  OLED_TEXT_FUNCTIONS.md  OLEDtask.c  README_Run_File_Execution.md  ReportParser.c  ReportParser.h  UARTtask.c  UARTtask.h  USBDeviceTask.h  USBHostTask.c  USBHostTask.h  USBtask.c  USBtask.h  base64.c  base64.h  configRead.c  configRead.h  fstask.h  oled_text_example.c  oled_text_example.h  usb_hid_switcher.c
usb_switcher/: CMakeLists.txt  GamepadReportParser.c  LEDtask.c  LEDtask.h  OLEDtask.h  README_FIFO_Lua_Execution.md  README_Keyboard_Functions.md  README_Type_Function.md  UARTtask.c  UARTtask.h  USBDeviceTask.c  USBHostTask.c  USBtask.c  fstask.c  tusb_config.h  usb_descriptors.c  usb_switcher.c  ws2812.c  ws2812.h  ws2812.pio
usb_switcher/readme/: readme.md
